2006-09-05  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Verify.py: Import Errors.

2006-09-04  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: don't delete tabs
	* src/DisplayTabs/_NoteTab.py: allow tabs to be entered

2006-09-03  Don Allingham  <don@gramps-project.org>
	* src/ScratchPad.py: add dnd support for MediaRefs (bug #417)
	* src/DdTargets.py: add dnd support for MediaRefs (bug #417)

2006-09-02  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_EventEmbedList.py: Don't override event type on
	a drag-n-drop (bug #420)
	* po/POTFILES.in: remove non-shipping modules

2006-09-01  Brian Matherly  <brian@gramps-project.org>
        * src/plugins/Calendar.py: fix filter typo
        * src/plugins/WritePkg.py: don't set uid on Windows

2006-09-01  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_DbUtils.py: Use normal addition: this updates
	reference_map properly.
	* src/plugins/StatisticsChart.py: Remove cause.
	* src/GrampsDb/_WriteXML.py (write_object): Escape path of the files;
	(fix): remove control characters.

2006-08-29  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py (remove_person,_do_remove_object):
	Properly delete objects;
	(get_del_func): Add method to find deleting function for an object.
	* src/plugins/Check.py (cleanup_empty_families): Report gramps id.
	* src/RelLib/_SourceRef.py (SourceRef.__init__): Pass source.
	* src/RelLib/_ChildRef.py (ChildRef.__init__): Pass source.
	* src/RelLib/_EventRef.py (EventRef.__init__): Pass source.
	* src/RelLib/_PersonRef.py (PersonRef.__init__): Pass source.
	* src/RelLib/_RepoRef.py (RepoRef.__init__): Pass source.
	* src/glade/gramps.glade: Add privacy controls to all editors.
	* src/Editors/_EditSource.py: Add privacy control.
	* src/Editors/_EditSourceRef.py: Add privacy control.
	* src/Editors/_EditPlace.py: Add privacy control.
	* src/Editors/_EditMedia.py: Add privacy control.