@@ -1,3 +1,13 @@
+2006-09-09  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDb/_ReadXML.py: remove commented out code
+	* src/Editors/_EditEvent.py: handle overwriting of date text
+	* src/RelLib/_DateBase.py: allow optional dropping of date text on
+	serialization
+	* src/RelLib/_Date.py: allow optional dropping of date text on
+	serialization
+	* src/RelLib/_Event.py: allow optional dropping of date text on
+	serialization
+
 2006-09-05  Alex Roitman  <shura@gramps-project.org>
 	* src/plugins/Verify.py: Import Errors.
 
